<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_account"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_margin="20dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarSize="2dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_student"
                android:layout_marginTop="20dp"
                android:textSize="40dp"
                android:layout_gravity="center"
                android:textColor="@color/light_blue"
                android:layout_marginBottom="30dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_student"
                android:textColor="@color/black"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/light_blue"
                android:textColorHint="@color/light_blue"

                android:textSize="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_number"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginBottom="5dp"

                />
            <EditText
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:textColor="@color/light_blue"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/national_id_student"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginBottom="5dp"
                />
            <EditText
                android:id="@+id/national"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:textColor="@color/light_blue"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:inputType="number"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_student"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginBottom="5dp"
                />
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:textColor="@color/light_blue"
                android:inputType="number"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginBottom="5dp"
                />
            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                >

                <RadioButton android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:paddingRight="50dp"
                    />
                <RadioButton android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/department_student"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginBottom="5dp"
                />
            <Spinner
                android:id="@+id/department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/department"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/orange"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password1"
                android:textSize="25dp"
                android:textColor="@color/black"


                />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:inputType="numberPassword"
                android:cursorVisible="true"
                app:passwordToggleEnabled="true"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="30dp"
                android:textSize="10dp"
                android:textColor="@color/light_blue"
                />


            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_student_button"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"

                />


        </LinearLayout>
    </ScrollView>


</LinearLayout>