<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarSize="2dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/ic_log_in"
        android:padding="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
     />
            <TextView
                android:id="@+id/kanda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="kanda hano"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_id"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:fontFamily="sans-serif"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/regno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:selectAllOnFocus="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="30dp"
        android:textSize="15dp"
        android:textColor="@color/light_blue"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password1"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"

        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="numberPassword"
        android:cursorVisible="true"
        app:passwordToggleEnabled="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="30dp"
        android:textSize="15dp"
        android:textColor="@color/light_blue"
        />
    <TextView
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:text="@string/new_student_create_an_account"
        android:linksClickable="true"
        android:contextClickable="true"
        android:textColor="@color/teal_700"
        android:layout_marginBottom="20dp"
        />


    <Button
        android:id="@+id/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:text="Login "
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"

        />



        </LinearLayout>
    </ScrollView>

</LinearLayout>